Update background color and text alignment in CSS styles. Add new icons for app and software development.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Rokstar - Creative One Page Portfolio Html Template</title>
+    <title>Bonface Kabiru</title>
     <link rel="shortcut icon" type="image/png" href="img/icon/favicon.ico">
     <!-- all css here -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -36,9 +36,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-3 col-sm-12">
-                        <div class="logo">
-                            <a href='/'><img src="img/icon/logo.png" alt="logo"></a>
-                        </div>
+                        
                     </div>
                     <div class="col-md-9 d-none d-md-block">
                         <div class="main-menu">
@@ -61,14 +59,22 @@
     </header>
     <!-- header area end -->
     <!-- slider area start -->
-    <section id="home" class="slider-area parallax" data-speed="3" data-bg-image="img/bg/slider-bg.jpg">
+    <section id="home" class="slider-area parallax" data-speed="3" data-bg-image="" style="    background-color: black;">
         <div class="container">
             <div class="slider-content">
-                <h2 class="txtanim1"><span>I'm</span> <span>lucy</span> <span>Doe</span></h2>
+                <h2 class="txtanim1"><span>I'm</span> <span>Bonface</span> <span>Njuguna</span></h2>
                 <h4 class="txtanim1 delay1">
-                    <span>W</span>
-                    <span>e</span>
-                    <span>b</span>
+                    <span>F</span>
+                    <span>u</span>
+                    <span>l</span>
+                    <span>l</span>
+                    <span> </span>
+                    <span>S</span>
+                    <span>t</span>
+                    <span>a</span>
+                    <span>c</span>
+                    <span>k</span>
+                    <span> </span>
                     <span>D</span>
                     <span>e</span>
                     <span>v</span>
@@ -87,7 +93,7 @@
             </svg>
         </div>
         <div class="txtanim1 next-section">
-            <span><a href="#about">about us <strong><i class="fa fa-question-circle"></i></strong></a></span>
+            <span><a href="#about">about <strong><i class="fa fa-question-circle"></i></strong></a></span>
         </div>
     </section>
     <!-- slider area end -->
@@ -97,24 +103,23 @@
             <div class="row align-items-center">
                 <div class="col-md-4">
                     <div class="abt-left-thumb">
-                        <img src="img/about/abt-left-thumb.jpg" alt="image">
+                        <img src="img/about/bonface_picture.jpg" alt="image">
                     </div>
                 </div>
                 <div class="col-md-7 offset-md-1">
                     <div class="abt-content">
                         <div class="section-title">
-                            <h2 class="txt2_is_show">About Us</h2>
+                            <h2 class="txt2_is_show">About Me</h2>
                         </div>
-                        <p class="txt1-wrap"><span class="txt1">For instance, whenever I go back to the guest house during the morning to copy out the contract, these gentlemen are always still sitting there eating their breakfasts. I ought to just try that witht my boss; I'd get kicked out on the spot.</span></p>
-                        <p class="txt1-wrap"><span class="txt1">But who knows, maybe that would be the best thing for me. He'd fall right off his desk! And it's a funny sort of business to be sitting up there at your desk,</span> <span class="txt1">talking down at your subordinates. I ought to just try that witht my boss; I'd get kicked out on the spot. But who knows, maybe that would be the best thing for me. He'd fall right off his desk! And it's a funny sort of business to be sitting up there at your desk, talking down at your subordinates.</span></p>
-                        <div class="social-link">
-                            <h5>Share :</h5>
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-linkedin"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
-                        </div>
+                        <p class="txt1-wrap"><span class="txt1">I am a Full-Stack Developer from Turkana.  I love creating efficient, scalable, and user-friendly web applications that deliver a seamless user experience.</span></p>
+                        <p class="txt1-wrap"><span class="tx1"><strong>Skills</strong></span><br>
+                            <strong>Languages: </strong>JavaScript, C#, HTML5, CSS3, C++, Python<span class="txt1"></span><br>
+                            <strong>Front-end: </strong>React, Vue, Bootstrap<span class="txt1"></span><br>
+                            <strong>Back-end: </strong>C#, Laravel, Node, Express, Flask<span class="txt1"></span><br>
+                            <strong>Database: </strong>MongoDB, MySQL, PostgreSQL<span class="txt1"></span><br>
+                            <strong>Tools: </strong>Git, Docker<span class="txt1"></span><br>
+                            <strong>Deployment: </strong>AWS, Azure<span class="txt1"></span>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -129,8 +134,8 @@
                     <div class="single-service txt2_is_show">
                         <div class="icon"><span class="flaticon-web-design"></span></div>
                         <div class="srvc-content">
-                            <h4>Web Design</h4>
-                            <p>I ought to just try that with my boss; I'd get kicked out on the spot. But who knows, maybe that would be the best</p>
+                            <h4>Web Development</h4>
+                            <p>I am a professional web developer with expertise in creating responsive and visually appealing websites. I have experience in HTML, CSS, and JavaScript to build interactive web applications.</p>
                         </div>
                     </div>
                 </div>
@@ -138,8 +143,8 @@
                     <div class="single-service txt2_is_show">
                         <div class="icon"><span class="flaticon-settings"></span></div>
                         <div class="srvc-content">
-                            <h4>Illustrator</h4>
-                            <p>I ought to just try that with my boss; I'd get kicked out on the spot. But who knows, maybe that would be the best</p>
+                            <h4>App Development</h4>
+                            <p>I am skilled in developing mobile applications for both Android and iOS platforms. I have experience in using frameworks like React Native and Flutter to create cross-platform apps.</p>
                         </div>
                     </div>
                 </div>
@@ -147,8 +152,8 @@
                     <div class="single-service txt2_is_show">
                         <div class="icon"><span class="flaticon-adobe"></span></div>
                         <div class="srvc-content">
-                            <h4>Branding Identity</h4>
-                            <p>I ought to just try that with my boss; I'd get kicked out on the spot. But who knows, maybe that would be the best</p>
+                            <h4>Software Development</h4>
+                            <p>I am skilled in software development and have expertise in programming languages like C++, C# and Python. I can develop custom software solutions tailored to meet specific business requirements.</p>
                         </div>
                     </div>
                 </div>
@@ -165,46 +170,53 @@
     <section class="fortfolio-area bg-gray pt--100 pb--200" id="portfolio">
         <div class="container">
             <div class="section-title">
-                <h2 class="txt2_is_show">Our Portfolio</h2>
+                <h2 class="txt2_is_show">My Portfolio</h2>
             </div>
             <div class="fortfolio-filter">
                 <button class="active" data-filter="*">All</button>
-                <button data-filter=".web">Web Design</button>
-                <button data-filter=".design">Graphics Design</button>
-                <button data-filter=".marketing">Marketing</button>
+                <button data-filter=".web">Web</button>
+                <button data-filter=".mobileapps">Mobile Apps</button>
+                <button data-filter=".games">Games</button>
             </div>
             <div class="portfolio-masonary row" id="container">
-                <div class="prt-grid marketing design col-md-4 col-sm-6">
+                <div class="prt-grid games col-md-6 col-sm-6">
                     <div class="prt-item">
-                        <a class="expand-video" href="https://www.youtube.com/watch?v=eDiA1p5DlLg">
-                            <span class="flaticon-play-button"></span>
-                            <img src="img/portfolio/img1.jpg" alt="image">
-                        </a>
+                        <a class="expand-img" href="img/portfolio/monster-slice-game.png"><img src="img/portfolio/monster-slice-game.png" alt="image"></a>
                     </div>
                 </div>
-                <div class="prt-grid marketing web col-md-4 col-sm-6">
+                <div class="prt-grid web col-md-6 col-sm-6">
                     <div class="prt-item">
-                        <a class="expand-img" href="img/portfolio/img2.jpg"><img src="img/portfolio/img2.jpg" alt="image"></a>
+                        <a class="expand-img" href="img/portfolio/helena-dunkel.png"><img src="img/portfolio/helena-dunkel.png" alt="image"></a>
                     </div>
                 </div>
-                <div class="prt-grid col-md-4 col-sm-6">
+                <div class="prt-grid web col-md-6 col-sm-6">
                     <div class="prt-item">
-                        <a class="expand-img" href="img/portfolio/img3.jpg"><img src="img/portfolio/img3.jpg" alt="image"></a>
+                        <a class="expand-img" href="img/portfolio/sussanedunkel.png"><img src="img/portfolio/sussanedunkel.png" alt="image"></a>
                     </div>
                 </div>
-                <div class="prt-grid design marketing col-md-4 col-sm-6">
+                <div class="prt-grid web col-md-6 col-sm-6">
                     <div class="prt-item">
-                        <a class="expand-img" href="img/portfolio/img4.jpg"><img src="img/portfolio/img4.jpg" alt="image"></a>
+                        <a class="expand-img" href="img/portfolio/nawirides.png"><img src="img/portfolio/nawirides.png" alt="image"></a>
                     </div>
                 </div>
-                <div class="prt-grid web design col-md-4 col-sm-6">
+                <div class="prt-grid web col-md-6 col-sm-6">
                     <div class="prt-item">
-                        <a class="expand-img" href="img/portfolio/img5.jpg"><img src="img/portfolio/img5.jpg" alt="image"></a>
+                        <a class="expand-img" href="img/portfolio/apuuzawadi.png"><img src="img/portfolio/apuuzawadi.png" alt="image"></a>
                     </div>
                 </div>
-                <div class="prt-grid design marketing col-md-4 col-sm-6">
+                <div class="prt-grid web col-md-6 col-sm-6">
                     <div class="prt-item">
-                        <a class="expand-img" href="img/portfolio/img6.jpg"><img src="img/portfolio/img6.jpg" alt="image"></a>
+                        <a class="expand-img" href="img/portfolio/avision.png"><img src="img/portfolio/avision.png" alt="image"></a>
+                    </div>
+                </div>
+                <div class="prt-grid mobile col-md-6 col-sm-6">
+                    <div class="prt-item">
+                        <a class="expand-img" href="img/portfolio/lodwar_fish_hub.jpeg"><img src="img/portfolio/lodwar_fish_hub.jpeg" alt="image"></a>
+                    </div>
+                </div>
+                <div class="prt-grid web col-md-6 col-sm-6">
+                    <div class="prt-item">
+                        <a class="expand-img" href="img/portfolio/sarah_fitness_app.jpg"><img src="img/portfolio/sarah_fitness_app.jpg" alt="image"></a>
                     </div>
                 </div>
             </div>
@@ -220,43 +232,22 @@
     <section class="contact-area ptb--100" id="contact">
         <div class="container">
             <div class="section-title">
-                <h2 class="txt2_is_show">Get In Tuch</h2>
+                <h2 class="txt2_is_show">Get In Touch</h2>
             </div>
             <div class="row">
-                <div class="col-md-5">
+                <div class="col-md-12">
                     <div class="cnt-left">
                         <ul>
-                            <li>100 Main St, Blacktown NSW 2148, <span class="ct-break">Australia</span></li>
-                            <li>support@bold.com, info@youremail.com</li>
-                            <li>+256-4516-556, +(257) 56812749</li>
+                            <li>30500, Lodwar, Kenya</li>
+                            <a href="mailto:bonfacenjuguna13@gmail.com"><li>bonfacenjuguna13@gmail.com</li></a> 
+                            <a href="tel:+254-759-174-761"><li>+254-759-174-761</li></a>
                         </ul>
                         <div class="social-link">
-                            <h5>Share :</h5>
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-linkedin"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
+                            <h5>Find me :</h5>
+                            <a href="https://github.com/BonfaceNjuguna"><i class="fa fa-github"></i></a>
+                            <a href="https://www.linkedin.com/in/bonface-kabiru/"><i class="fa fa-linkedin"></i></a>
+                            <a href="https://twitter.com/bonnienjush"><i class="fa fa-twitter"></i></a>
                         </div>
-                    </div>
-                </div>
-                <div class="col-md-7">
-                    <div class="contact-form">
-                        <div class="screen-reader-response"></div>
-                        <form action="mail.php" id="cf">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <input type="text" id="name" name="name" placeholder="Name Here*">
-                                </div>
-                                <div class="col-md-6">
-                                    <input type="email" id="email" name="email" placeholder="Email Here*">
-                                </div>
-                            </div>
-                            <textarea name="msg" id="msg" placeholder="Message Here*"></textarea>
-                            <div class="form-submit">
-                                <button type="submit" name="submit" id="cnt_submit">Send Message <i class="fa fa-long-arrow-right"></i></button>
-                            </div>
-                        </form>
                     </div>
                 </div>
             </div>
@@ -269,13 +260,13 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-6 col-sm-4">
-                        <div class="flogo">
+                        <!-- <div class="flogo">
                             <a href='/'><img src="img/icon/flogo.png" alt="logo"></a>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="col-md-6 col-sm-8">
                         <div class="copyright">
-                            <p>@Copyright By <span>Codexfusion</span></p>
+                            <p>@Copyright 2024 <span>Bonface Kabiru</span></p>
                         </div>
                     </div>
                 </div>
