Update portfolio grid classes

--- a/index.html
+++ b/index.html
@@ -209,12 +209,12 @@
                         <a class="expand-img" href="img/portfolio/avision.png"><img src="img/portfolio/avision.png" alt="image"></a>
                     </div>
                 </div>
-                <div class="prt-grid mobile col-md-6 col-sm-6">
+                <div class="prt-grid mobileapps col-md-6 col-sm-6">
                     <div class="prt-item">
                         <a class="expand-img" href="img/portfolio/lodwar_fish_hub.jpeg"><img src="img/portfolio/lodwar_fish_hub.jpeg" alt="image"></a>
                     </div>
                 </div>
-                <div class="prt-grid web col-md-6 col-sm-6">
+                <div class="prt-grid mobileapps col-md-6 col-sm-6">
                     <div class="prt-item">
                         <a class="expand-img" href="img/portfolio/sarah_fitness_app.jpg"><img src="img/portfolio/sarah_fitness_app.jpg" alt="image"></a>
                     </div>
