Add project details and gallery to the project-details.html page; create projects.js for project data management

--- a/index.html
+++ b/index.html
@@ -174,49 +174,45 @@
             </div>
             <div class="fortfolio-filter">
                 <button class="active" data-filter="*">All</button>
-                <button data-filter=".web">Web</button>
-                <button data-filter=".mobileapps">Mobile Apps</button>
+                <button data-filter=".web-apps">Web Apps</button>
+                <button data-filter=".cms-ecommerce">CMS & E-commerce</button>
+                <button data-filter=".mobile-apps">Mobile Apps</button>
                 <button data-filter=".games">Games</button>
             </div>
             <div class="portfolio-masonary row" id="container">
                 <div class="prt-grid games col-md-6 col-sm-6">
                     <div class="prt-item">
-                        <a class="expand-img" href="img/portfolio/monster-slice-game.png"><img src="img/portfolio/monster-slice-game.png" alt="image"></a>
+                        <a class="" href="project-details.html?id=monster-slice-game"><img src="img/portfolio/monsterslice/monster-slice-game.png" alt="image"></a>
                     </div>
                 </div>
-                <div class="prt-grid web col-md-6 col-sm-6">
+                <div class="prt-grid cms-ecommerce col-md-6 col-sm-6">
                     <div class="prt-item">
-                        <a class="expand-img" href="img/portfolio/helena-dunkel.png"><img src="img/portfolio/helena-dunkel.png" alt="image"></a>
+                        <a href="project-details.html?id=helena-dunkel"><img src="img/portfolio/helenadunkel/helena-dunkel.png" alt="image"></a>
                     </div>
                 </div>
-                <div class="prt-grid web col-md-6 col-sm-6">
+                <div class="prt-grid web-apps col-md-6 col-sm-6">
                     <div class="prt-item">
-                        <a class="expand-img" href="img/portfolio/sussanedunkel.png"><img src="img/portfolio/sussanedunkel.png" alt="image"></a>
+                        <a class="expand-img" href="img/portfolio/sussanedunkel.png"><img src="img/portfolio//sussanedunkel/sussanedunkel.png" alt="image"></a>
                     </div>
                 </div>
-                <div class="prt-grid web col-md-6 col-sm-6">
+                <div class="prt-grid mobile-apps col-md-6 col-sm-6">
                     <div class="prt-item">
-                        <a class="expand-img" href="img/portfolio/nawirides.png"><img src="img/portfolio/nawirides.png" alt="image"></a>
+                        <a class="" href="project-details.html?id=nawirides"><img src="img/portfolio/nawirides/nawirides.png" alt="image"></a>
                     </div>
                 </div>
-                <div class="prt-grid web col-md-6 col-sm-6">
+                <div class="prt-grid cms-ecommerce col-md-6 col-sm-6">
                     <div class="prt-item">
-                        <a class="expand-img" href="img/portfolio/apuuzawadi.png"><img src="img/portfolio/apuuzawadi.png" alt="image"></a>
+                        <a class="" href="project-details.html?id=apuuzawadi"><img src="img/portfolio/apuuzawadi/apuuzawadi.png" alt="image"></a>
                     </div>
                 </div>
-                <div class="prt-grid web col-md-6 col-sm-6">
+                <div class="prt-grid mobile-apps col-md-6 col-sm-6">
                     <div class="prt-item">
-                        <a class="expand-img" href="img/portfolio/avision.png"><img src="img/portfolio/avision.png" alt="image"></a>
+                        <a class="expand-img" href="img/portfolio/lodwar_fish_hub.jpeg"><img src="img/portfolio/lodwarfishhub/lodwar_fish_hub.jpeg" alt="image"></a>
                     </div>
                 </div>
-                <div class="prt-grid mobileapps col-md-6 col-sm-6">
+                <div class="prt-grid mobile-apps col-md-6 col-sm-6">
                     <div class="prt-item">
-                        <a class="expand-img" href="img/portfolio/lodwar_fish_hub.jpeg"><img src="img/portfolio/lodwar_fish_hub.jpeg" alt="image"></a>
-                    </div>
-                </div>
-                <div class="prt-grid mobileapps col-md-6 col-sm-6">
-                    <div class="prt-item">
-                        <a class="expand-img" href="img/portfolio/sarah_fitness_app.jpg"><img src="img/portfolio/sarah_fitness_app.jpg" alt="image"></a>
+                        <a class="expand-img" href="img/portfolio/sarah_fitness_app.jpg"><img src="img/portfolio/sarahfitness/sarah_fitness_app.jpg" alt="image"></a>
                     </div>
                 </div>
             </div>
@@ -266,7 +262,7 @@
                     </div>
                     <div class="col-md-6 col-sm-8">
                         <div class="copyright">
-                            <p>@Copyright 2024 <span>Bonface Kabiru</span></p>
+                            <p> &copy; <span id="year"></span> <span>Bonface Kabiru</span></p>
                         </div>
                     </div>
                 </div>
