--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
                         <p class="txt1-wrap"><span class="tx1"><strong>Skills</strong></span><br>
                             <strong>Languages: </strong>JavaScript, C#, HTML5, CSS3, C++, Python<span class="txt1"></span><br>
                             <strong>Front-end: </strong>React, Vue, Bootstrap<span class="txt1"></span><br>
-                            <strong>Back-end: </strong>C#, Laravel, Node, Express, Flask<span class="txt1"></span><br>
+                            <strong>Back-end: </strong>C#, Laravel, Node, Express, Flask, FastAPI<span class="txt1"></span><br>
                             <strong>Database: </strong>MongoDB, MySQL, PostgreSQL<span class="txt1"></span><br>
                             <strong>Tools: </strong>Git, Docker<span class="txt1"></span><br>
-                            <strong>Deployment: </strong>AWS, Azure<span class="txt1"></span>
+                            <strong>Deployment: </strong>AWS, Azure, Google Cloud<span class="txt1"></span>
                         </p>
                     </div>
                 </div>
@@ -190,9 +190,9 @@
                         <a href="project-details.html?id=helena-dunkel"><img src="img/portfolio/helenadunkel/helena-dunkel.png" alt="image"></a>
                     </div>
                 </div>
-                <div class="prt-grid web-apps col-md-6 col-sm-6">
+                <div class="prt-grid cms-ecommerce col-md-6 col-sm-6">
                     <div class="prt-item">
-                        <a class="expand-img" href="img/portfolio/sussanedunkel.png"><img src="img/portfolio//sussanedunkel/sussanedunkel.png" alt="image"></a>
+                        <a href="project-details.html?id=susanne-dunkel"><img src="img/portfolio/sussanedunkel/sussanedunkel.png" alt="image"></a>
                     </div>
                 </div>
                 <div class="prt-grid mobile-apps col-md-6 col-sm-6">
