--- a/project-details.html
+++ b/project-details.html
@@ -63,8 +63,8 @@
     <section class="project-details-area ptb--100">
         <div class="container">
             <div class="row">
-                <div class="col-12">
-                    <h2 id="project-title" class="text-center mb-5"></h2>
+                <div class="col-md-10 offset-md-1">
+                    <h2 id="project-title" class="text-left mb-5"></h2>
                 </div>
             </div>
             <div class="row">
