Update project links in index.html and add new projects to projects.js with updated statuses

--- a/index.html
+++ b/index.html
@@ -207,12 +207,12 @@
                 </div>
                 <div class="prt-grid mobile-apps col-md-6 col-sm-6">
                     <div class="prt-item">
-                        <a class="expand-img" href="img/portfolio/lodwar_fish_hub.jpeg"><img src="img/portfolio/lodwarfishhub/lodwar_fish_hub.jpeg" alt="image"></a>
+                        <a href="project-details.html?id=lodwar-fish-hub"><img src="img/portfolio/lodwarfishhub/lodwar_fish_hub.jpeg" alt="image"></a>
                     </div>
                 </div>
                 <div class="prt-grid mobile-apps col-md-6 col-sm-6">
                     <div class="prt-item">
-                        <a class="expand-img" href="img/portfolio/sarah_fitness_app.jpg"><img src="img/portfolio/sarahfitness/sarah_fitness_app.jpg" alt="image"></a>
+                        <a href="project-details.html?id=sarah-fitness-app"><img src="img/portfolio/sarahfitness/sarah_fitness_app.jpg" alt="image"></a>
                     </div>
                 </div>
             </div>
