Implement code changes to enhance functionality and improve performance

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         <p class="txt1-wrap"><span class="tx1"><strong>Skills</strong></span><br>
                             <strong>Languages: </strong>JavaScript, C#, HTML5, CSS3, C++, Python<span class="txt1"></span><br>
                             <strong>Front-end: </strong>React, Vue, Bootstrap<span class="txt1"></span><br>
-                            <strong>Back-end: </strong>C#, Laravel, Node, Express, Flask, FastAPI<span class="txt1"></span><br>
+                            <strong>Back-end: </strong>.NET, Laravel, Node, Express, Flask, FastAPI<span class="txt1"></span><br>
                             <strong>Database: </strong>MongoDB, MySQL, PostgreSQL<span class="txt1"></span><br>
                             <strong>Tools: </strong>Git, Docker<span class="txt1"></span><br>
                             <strong>Deployment: </strong>AWS, Azure, Google Cloud<span class="txt1"></span>
@@ -195,7 +195,7 @@
                         <a href="project-details.html?id=susanne-dunkel"><img src="img/portfolio/sussanedunkel/sussanedunkel.png" alt="image"></a>
                     </div>
                 </div>
-                <div class="prt-grid mobile-apps col-md-6 col-sm-6">
+                <div class="prt-grid cms-ecommerce col-md-6 col-sm-6">
                     <div class="prt-item">
                         <a class="" href="project-details.html?id=nawirides"><img src="img/portfolio/nawirides/nawirides.png" alt="image"></a>
                     </div>
@@ -215,6 +215,18 @@
                         <a href="project-details.html?id=sarah-fitness-app"><img src="img/portfolio/sarahfitness/sarah_fitness_app.jpg" alt="image"></a>
                     </div>
                 </div>
+                <div class="prt-grid cms-ecommerce col-md-6 col-sm-6">
+                    <div class="prt-item">
+                        <a href="project-details.html?id=tourism-turkana"><img src="img/portfolio/tourismturkanacounty/tourism1.png" alt="Tourism Turkana"></a>
+                    </div>
+                </div>
+                <div class="prt-grid web-apps col-md-6 col-sm-6">
+                    <div class="prt-item">
+                        <a href="project-details.html?id=cis-turkana"><img src="img/portfolio/cisturkanacounty/cis1.png" alt="Climate Information System"></a>
+                    </div>
+                </div>
+            </div>
+            </div>
             </div>
         </div>
         <div class="white_svg svg_white">
