Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -225,6 +225,18 @@
                         <a href="project-details.html?id=cis-turkana"><img src="img/portfolio/cisturkanacounty/cis1.png" alt="Climate Information System"></a>
                     </div>
                 </div>
+                <div class="prt-grid web-apps col-md-6 col-sm-6">
+                    <div class="prt-item">
+                        <a href="project-details.html?id=turkhealth"><img src="img/portfolio//turkhealth/turkhealth2.png" alt="TurkHealth"></a>
+                    </div>
+                </div>
+                <div class="prt-grid web-apps col-md-6 col-sm-6">
+                    <div class="prt-item">
+                        <a href="project-details.html?id=loropio-kitchen"><img src="img/portfolio/loropiokitchen/loropiokitchen3.png" alt="Loropio Kitchen"></a>
+                    </div>
+                </div>
+            </div>
+            </div>
             </div>
             </div>
             </div>
